src/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply bg-gradient-to-tl from-blue-50 to-blue-300 dark:from-blue-900 dark:to-blue-600 text-blue-800 dark:text-blue-200;
  background-repeat: no-repeat;
  background-attachment: fixed;
}
.pt-section {
  padding-top: 100px;
  margin-top: -100px;
}

html {
  scroll-behavior: smooth;
}

/* Scrollbar styling */
::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-track {
   @apply bg-blue-100 dark:bg-blue-700;

}

::-webkit-scrollbar-thumb {
  @apply bg-blue-700 dark:bg-blue-200;
  
  border-radius: 10px;
}

